<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/doc_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/glegoo"
        android:textSize="32sp"
        android:textStyle="bold"
        android:paddingLeft="15dp"
        android:paddingBottom="25dp"
        android:text="@string/welcome" />

    <ImageView
        android:id="@+id/doc_page__image1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:srcCompat="@drawable/image_2" />

    <Button
        android:id="@+id/doc_page_button_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/doc_page_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="@font/glegoo"
        android:textStyle="bold"
        android:text="@string/or" />

    <Button
        android:id="@+id/doc_page_button_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/registration" />

    <TextView
        android:id="@+id/doc_page_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginVertical="5dp"
        android:gravity="center"
        android:text="@string/doc_page_login_text" />

</LinearLayout>