<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <TextView
        android:id="@+id/patient_register_page2_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingVertical="10dp"
        android:fontFamily="@font/glegoo"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/welcome"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/patient_register_page2_image1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/image_4" />

    <TextView
        android:id="@+id/patient_register_page2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/glegoo"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/register2_text1" />

    <EditText
        android:id="@+id/patient_register_page2_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/glegoo"
        android:textSize="20sp"
        android:background="@color/third_blue"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:padding="5dp"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/name" />

    <TextView
        android:id="@+id/patient_register_page2_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/glegoo"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/register2_text2" />

    <com.google.android.material.slider.Slider
        android:id="@+id/patient_register_page2_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:value="20"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="100"
        android:layout_marginHorizontal="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/patient_register_page2_button_plus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:textSize="30sp"
            app:cornerRadius="80dp"
            android:text="@string/plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/patient_register_page2_button_minus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:cornerRadius="80dp"
            android:text="@string/minus" />
    </LinearLayout>

    <TextView
        android:id="@+id/patient_register_page2_text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/glegoo"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:text="@string/register2_text3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="130dp"
        android:background="@color/third_blue"
        android:layout_gravity="center">

        <Spinner
            android:id="@+id/patient_register_page2_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:entries="@array/spinner_array"/>
    </LinearLayout>

    <Button
        android:id="@+id/patient_register_page2_button_next"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/next" />

</LinearLayout>